tests/e2e/pass/v2_struct_init.ep
# EXIT: 42
type Point {
    x: i64
    y: i64
}

fun run(): i64 {
    let p = new Point { y: 40, x: 2 }
    ret p.x + p.y
}

fun main(): void {
    exit(run())
}
