tests/e2e/fail/is_null_enum.ep
# COMPILE_ERROR: is_null expects a reference, got IsNullKind
type IsNullKind = One | Two
fun main(): void {
    let result = is_null(IsNullKind.One)
}
